--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     repositories {
         google()
         mavenCentral()
-//        jcenter()
+        jcenter()
         maven { url "https://jitpack.io" }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
         classpath 'com.google.gms:google-services:4.3.8'
@@ -20,7 +22,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-//        jcenter()
+        jcenter()
         maven { url "https://jitpack.io" }
 
     }
