--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
-def BaseVersion = '1.5.73'
+def BaseVersion = '1.5.80'
 def incrementalVersion='1'
 android {
     compileSdkVersion 31
@@ -97,9 +97,9 @@ dependencies {
     //for locale
     implementation 'com.akexorcist:localization:1.2.11'
     //base of project
-//    api "com.github.akaravi:Ntk.Android.BaseActivity:${BaseVersion}"
-//
-     api project(path: ':baseActivity')
+    api "com.github.akaravi:Ntk.Android.BaseActivity:${BaseVersion}"
+
+//     api project(path: ':baseActivity')
 
 }
 repositories {
