--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-
-    ext {
-        agp_version = '7.0.4'
-    }
-    repositories {
+   repositories {
         google()
         mavenCentral()
 //        jcenter()
@@ -19,9 +15,8 @@ buildscript {
         }
         maven { url 'https://dl.bintray.com/drummer-aidan/maven' }
     }
-
     dependencies {
-        classpath "com.android.tools.build:gradle:$agp_version"
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
         // NOTE: Do not place your application dependencies here; they belong
@@ -34,11 +29,8 @@ allprojects {
         mavenCentral()
         jcenter()
         maven { url "https://jitpack.io" }
-
-
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
