--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity
             android:name=".activity.MainActivity_4"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.ArticleWithCategoryUsedActivity" />
 
 
         <provider
