--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include 'app' //ticcket 25
-//include 'baseActivity'
-//project(':baseActivity').projectDir = new File('..\\Ntk.Android.BaseActivity\\app')
-//include('baseApi')
-//project(':baseApi').projectDir = new File('..\\Ntk.Android.Base\\api')
+include 'baseActivity'
+project(':baseActivity').projectDir = new File('..\\Ntk.Android.BaseActivity\\app')
+include('baseApi')
+project(':baseApi').projectDir = new File('..\\Ntk.Android.Base\\api')
 ////////
